# flipper-zero-air-filter-reset

./: Cargo.toml  README.md
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
assets/: wind-icon.afphoto
password-tests/src/: lib.rs
src/: main.rs  password.rs  wind-10x10.icon
